--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <header> <h1> write some text </h1> </header>
-<form method="GET" target="_blank">
+<body>
+  {{#messagesArray}}
+    <li>{{message}}</li>
+  {{/messagesArray}}
+<form method="POST" action="/post">
     <input type="text" name="mytext" required />
     <input type="submit" value="Submit" />
 </form>
